# bnss_pipeline

./: .env.example  .gitignore  00_run_bnss_pipeline.ipynb  01_ingest_http.ipynb  02_bnss_etl.ipynb  03_rag_ingest.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  check_redirect.py  cli.py  config.py  etl_bnss.py  ingest_http.py  local_deepseek_openai_compat.py  models.py  project_structure.txt  pyproject.toml
.continue/agents/: new-config.yaml
.github/workflows/: ci.yml
bnss_pipeline/: __init__.py  cli.py  config.py  config_old.py  etl_bnss.py  ingest_http.py  models.py  validate.py
datasets/: bnss_crosswalk.jsonl  bnss_sections_index.fixed.jsonl  bnss_sections_index.jsonl
manifests/: fetch_2026-01-10T13-41-27Z.json  fetch_2026-01-10T13-41-29Z.json  fetch_2026-01-10T13-43-42Z.json  fetch_2026-01-10T13-43-43Z.json  fetch_2026-01-10T13-43-53Z.json  fetch_2026-01-10T13-43-54Z.json  fetch_2026-01-10T15-24-54Z.json  fetch_2026-01-10T15-24-56Z.json  fetch_2026-01-10T15-25-17Z.json  fetch_2026-01-10T15-25-18Z.json  fetch_2026-02-03T21-20-38Z.json  fetch_2026-02-03T21-20-40Z.json  fetch_2026-02-03T21-20-53Z.json  fetch_2026-02-03T21-20-55Z.json  fetch_2026-02-03T21-50-01Z.json  fetch_2026-02-03T21-50-02Z.json  fetch_2026-02-03T21-50-03Z.json  fetch_2026-02-03T21-50-05Z.json  url_cache.json
tests/: conftest.py  test_cli.py  test_config.py  test_etl_helpers.py  test_etl_parsers.py  test_helpers.py  test_models.py  test_validate.py
