[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnss-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.3",
    "ruff>=0.14.11",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
]

[project.scripts]
bnss-pipeline = "bnss_pipeline.cli:main"

[tool.setuptools]
packages = ["bnss_pipeline"]
