[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnss-pipeline"
version = "0.1.0"
description = "ETL pipeline for Bharatiya Nagarik Suraksha Sanhita (BNSS) legal data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.3",
    "ruff>=0.14.11",
    "trafilatura>=2.0.0",
]

[project.scripts]
bnss-pipeline = "bnss_pipeline.cli:main"

[tool.setuptools]
packages = ["bnss_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
